# cookiecutter-python

./: DEVELOPER.md  README.md  cookiecutter.json
{{cookiecutter.name}}/: DEVELOPER.md  README.md  env.yml  setup.cfg
{{cookiecutter.name}}/docs/source/: conf.py  index.rst  install.rst
{{cookiecutter.name}}/docs/source/reference/: core.rst
