[metadata]
name = {{cookiecutter.name}}
version = 0.0.0
author = {{cookiecutter.author}}
author_email = {{cookiecutter.email}}
description = {{cookiecutter.description}}
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/{{cookiecutter.github_user}}/{{cookiecutter.name}}
project_urls =
    Bug Tracker = https://github.com/{{cookiecutter.github_user}}/{{cookiecutter.name}}/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir == src
packages = find:
# install_requires = 
    # package1
    # package2
python_requires = >={{cookiecutter.python_version}}

[options.packages.find]
where = src